<resources>
    <string name="app_name">Speedo</string>

    <string name="label_avg_velocity">Avg Speed</string>
    <string name="label_max_velocity">Max Speed</string>
    <string name="initial_velocity">000</string>
    <string name="units_velocity">[m/min]</string>

    <string name="label_distance">ODO</string>
    <string name="initial_distance">0.000</string>
    <string name="units_distance">[km]</string>

    <string name="label_time">Time</string>
    <string name="initial_time">00:00</string>
    <string name="units_time">[mm:ss]</string>

    <string name="label_start">START</string>
    <string name="label_stop">STOP</string>
    <string name="label_reset">RESET</string>
    <string name="label_settings">Settings</string>

    <string name="settings_title">Set your parameters:</string>
    <string name="targetSpeed_text">Target Speed [m/min]</string>
    <string name="gps_update_time">GPS Update Rate [s]</string>
    <string name="gps_update_dist">GPS Update Rate [m]</string>

</resources>
