<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="50sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="7dp"
        android:gravity="center_vertical|center"
        android:text="@string/settings_title"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:layout_width="368dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/targetSpeedSet"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:text="@string/targetSpeed_text"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="48dp"
                tools:layout_editor_absoluteY="27dp" />

            <Space
                android:layout_width="30sp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/user_target_speed"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:autofillHints="350"
                android:ems="5"
                android:inputType="number"
                android:paddingLeft="20sp"
                android:paddingRight="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/GPS_update_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:text="@string/gps_update_time"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="48dp"
                tools:layout_editor_absoluteY="27dp" />

            <Space
                android:layout_width="50sp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/user_gps_update_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:autofillHints="350"
                android:ems="5"
                android:inputType="number"
                android:paddingLeft="20sp"
                android:paddingRight="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/GPS_update_dist"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:text="@string/gps_update_dist"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="48dp"
                tools:layout_editor_absoluteY="27dp" />

            <Space
                android:layout_width="50sp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/user_gps_update_dist"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:autofillHints="350"
                android:ems="5"
                android:inputType="number"
                android:paddingLeft="20sp"
                android:paddingRight="20sp" />
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>